variants of English, Arabic, Chinese